@@ -190,8 +190,10 @@ to write GML files that follow GML3 SF-0 profile. Otherwise GML2 will be used.<p
 be written with the "urn:ogc:def:crs:EPSG::" prefix.
 In the case, if the SRS is a geographic SRS without explicit AXIS order, but that the same SRS authority code
 imported with ImportFromEPSGA() should be treated as lat/long, then the function will take care of coordinate order swapping.
-If set to NO, SRS with EPSG authority will be written with the "EPSG:" prefix, even if they are in lat/long order.
-<p>
+If set to NO, SRS with EPSG authority will be written with the "EPSG:" prefix, even if they are in lat/long order.<p>
+
+<li> <b>SPACE_INDENTATION</b>=YES/NO. (OGR >= 1.8.0) Default to YES. If YES, the output will be indented with spaces
+for more readability, but at the expense of file size.<p>
 
 </ul>
 
